scala_l brary(
    s ces = ["*.scala"],
    comp ler_opt on_sets = ["fatal_warn ngs"],
    str ct_deps = True,
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/com/google/ nject:gu ce",
        "3rdparty/jvm/javax/ nject:javax. nject",
        "3rdparty/jvm/net/cod ng ll:scala-gu ce",
        "3rdparty/jvm/org/slf4j:slf4j-ap ",
        "cr-m xer/server/src/ma n/res ces",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/cand date_generat on",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/controller",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/featuresw ch",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/logg ng",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/module",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/param",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/scr be",
        "cr-m xer/server/src/ma n/scala/com/tw ter/cr_m xer/s m lar y_eng ne",
        "cr-m xer/thr ft/src/ma n/thr ft:thr ft-scala",
        "dec der/src/ma n/scala",
        "f nagle/f nagle-core/src/ma n",
        "f nagle/f nagle-http/src/ma n/scala",
        "f nagle/f nagle-thr ftmux/src/ma n/scala",
        "f natra- nternal/mtls-http/src/ma n/scala",
        "f natra- nternal/mtls-thr ftmux/src/ma n/scala",
        "f natra/http-core/src/ma n/java/com/tw ter/f natra/http",
        "f natra/ nject/ nject-app/src/ma n/scala",
        "f natra/ nject/ nject-core/src/ma n/scala",
        "f natra/ nject/ nject-server/src/ma n/scala",
        "f natra/ nject/ nject-ut ls/src/ma n/scala",
        "f natra/ut ls/src/ma n/java/com/tw ter/f natra/annotat ons",
        "hydra/common/l brar es/src/ma n/scala/com/tw ter/hydra/common/model_conf g",
        "product-m xer/core/src/ma n/scala/com/tw ter/product_m xer/core/controllers",
        "product-m xer/core/src/ma n/scala/com/tw ter/product_m xer/core/module",
        "product-m xer/core/src/ma n/thr ft/com/tw ter/product_m xer/core:thr ft-scala",
        "relevance-platform/src/ma n/scala/com/tw ter/relevance_platform/common/f lters",
        "src/thr ft/com/tw ter/t  l nes/render:thr ft-scala",
        "thr ft- b-forms/src/ma n/scala/com/tw ter/thr ft bforms",
        "thr ft- b-forms/src/ma n/scala/com/tw ter/thr ft bforms/v ew",
        "t  l nes/src/ma n/scala/com/tw ter/t  l nes/features/app",
        "tw ter-server- nternal",
        "tw ter-server/server/src/ma n/scala",
        "ut l/ut l-app/src/ma n/scala",
        "ut l/ut l-core:scala",
        "ut l/ut l-slf4j-ap /src/ma n/scala",
    ],
)
