scala_l brary(
    s ces = ["**/*.scala"],
    platform = "java8",
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/com/google/ nject:gu ce",
        "3rdparty/jvm/com/tw ter/storehaus:core",
        "3rdparty/jvm/javax/ nject:javax. nject",
        "3rdparty/jvm/net/cod ng ll:scala-gu ce",
        "3rdparty/jvm/org/lz4:lz4-java",
        "3rdparty/jvm/org/slf4j:slf4j-ap ",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/stats",
        "f nagle/f nagle-http/src/ma n/scala",
        "f natra- nternal/dec der/src/ma n/scala",
        "f natra- nternal/mtls-thr ftmux/src/ma n/scala",
        "f natra/ nject/ nject-app/src/ma n/scala",
        "f natra/ nject/ nject-core/src/ma n/scala",
        "f natra/ nject/ nject-server/src/ma n/scala",
        "f natra/ nject/ nject-thr ft-cl ent/src/ma n/scala",
        "f natra/ nject/ nject-ut ls/src/ma n/scala",
        "f natra/thr ft/src/ma n/scala/com/tw ter/f natra/thr ft",
        "f natra/thr ft/src/ma n/scala/com/tw ter/f natra/thr ft:controller",
        "f natra/thr ft/src/ma n/scala/com/tw ter/f natra/thr ft/f lters",
        "f natra/thr ft/src/ma n/scala/com/tw ter/f natra/thr ft/rout ng",
        "graph-feature-serv ce/src/ma n/res ces",
        "graph-feature-serv ce/src/ma n/scala/com/tw ter/graph_feature_serv ce/common",
        "graph-feature-serv ce/src/ma n/scala/com/tw ter/graph_feature_serv ce/ut l",
        "graph-feature-serv ce/src/ma n/thr ft/com/tw ter/graph_feature_serv ce:graph_feature_serv ce_thr ft-scala",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/common",
        "servo/request/src/ma n/scala",
        "src/scala/com/tw ter/storehaus_ nternal/ mcac ",
        "ut l/ut l-app/src/ma n/scala",
        "ut l/ut l-slf4j-ap /src/ma n/scala",
    ],
)
