scala_l brary(
    s ces = ["**/*.scala"],
    platform = "java8",
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/com/google/ nject:gu ce",
        "3rdparty/jvm/javax/ nject:javax. nject",
        "3rdparty/jvm/net/cod ng ll:scala-gu ce",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/stats",
        "f natra- nternal/dec der/src/ma n/scala",
        "f natra- nternal/g zmoduck/src/ma n/scala",
        "f natra- nternal/mtls-thr ftmux/src/ma n/scala",
        "f natra/ nject/ nject-app/src/ma n/scala",
        "f natra/ nject/ nject-core/src/ma n/scala",
        "f natra/ nject/ nject-server/src/ma n/scala",
        "f natra/ nject/ nject-thr ft-cl ent/src/ma n/scala",
        "f natra/ nject/ nject-ut ls/src/ma n/scala",
        "fr gate/fr gate-common:constdb_ut l",
        "graph-feature-serv ce/src/ma n/res ces",
        "graph-feature-serv ce/src/ma n/scala/com/tw ter/graph_feature_serv ce/common",
        "graph-feature-serv ce/src/ma n/scala/com/tw ter/graph_feature_serv ce/ut l",
        "graph-feature-serv ce/src/ma n/thr ft/com/tw ter/graph_feature_serv ce:graph_feature_serv ce_thr ft-scala",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/common",
        "servo/request/src/ma n/scala",
        "tw ter-server- nternal/src/ma n/scala",
        "tw ter-server/server/src/ma n/scala",
        "ut l/ut l-app/src/ma n/scala",
        "ut l/ut l-slf4j-ap /src/ma n/scala",
    ],
)
