scala_l brary(
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "3rdparty/jvm/com/tw ter/b ject on:core",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/constdb_ut l",
        "graph-feature-serv ce/src/ma n/scala/com/tw ter/graph_feature_serv ce/common",
        "src/scala/com/tw ter/ nteract on_graph/sc o/agg_all: nteract on_graph_ tory_aggregated_edge_snapshot-scala",
        "src/scala/com/tw ter/ nteract on_graph/sc o/ml/scores:real_graph_ n_scores-scala",
        "src/scala/com/tw ter/pluck/s ce/user_aud s:user_aud _f nal-scala",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2",
        "src/scala/com/tw ter/scald ng_ nternal/job",
        "src/scala/com/tw ter/scald ng_ nternal/job/analyt cs_batch",
    ],
)

scald ng_job(
    na  = "graph_feature_serv ce_adhoc_job",
    ma n = "com.tw ter.graph_feature_serv ce.scald ng.GraphFeatureServ ceAdhocApp",
    args = [
        "--date 2022-10-24",
    ],
    conf g = [
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    contact = "recos-platform-alerts@tw ter.com",
    hadoop_cluster = "atla-proc",
    hadoop_propert es = [("mapreduce.job.hdfs-servers", "/atla/proc/user/cassowary")],
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":scald ng"],
)

scald ng_job(
    na  = "graph_feature_serv ce_da ly_job",
    ma n = "com.tw ter.graph_feature_serv ce.scald ng.GraphFeatureServ ceSc duledApp",
    conf g = [
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    contact = "recos-platform-alerts@tw ter.com",
    cron = "01,31 * * * *",
    hadoop_cluster = "atla-proc",
    hadoop_propert es = [("mapreduce.job.hdfs-servers", "/atla/proc/user/cassowary")],
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":scald ng"],
)
