scala_l brary(
    s ces = ["*.scala"],
    comp ler_opt on_sets = ["fatal_warn ngs"],
    str ct_deps = True,
    tags = ["bazel-compat ble"],
    dependenc es = [
        "3rdparty/jvm/com/google/ nject:gu ce",
        "3rdparty/jvm/javax/ nject:javax. nject",
        "3rdparty/jvm/net/cod ng ll:scala-gu ce",
        "3rdparty/jvm/org/slf4j:slf4j-ap ",
        "f nagle/f nagle-core/src/ma n",
        "f nagle/f nagle-http/src/ma n/scala",
        "f nagle/f nagle-thr ftmux/src/ma n/scala",
        "f natra- nternal/mtls-http/src/ma n/scala",
        "f natra- nternal/mtls-thr ftmux/src/ma n/scala",
        "f natra/http-core/src/ma n/java/com/tw ter/f natra/http",
        "f natra/ nject/ nject-app/src/ma n/java/com/tw ter/ nject/annotat ons",
        "f natra/ nject/ nject-app/src/ma n/scala",
        "f natra/ nject/ nject-core/src/ma n/scala",
        "f natra/ nject/ nject-server/src/ma n/scala",
        "f natra/ nject/ nject-ut ls/src/ma n/scala",
        "ho -m xer/server/src/ma n/res ces",
        "ho -m xer/server/src/ma n/scala/com/tw ter/ho _m xer/controller",
        "ho -m xer/server/src/ma n/scala/com/tw ter/ho _m xer/federated",
        "ho -m xer/server/src/ma n/scala/com/tw ter/ho _m xer/module",
        "ho -m xer/server/src/ma n/scala/com/tw ter/ho _m xer/param",
        "ho -m xer/server/src/ma n/scala/com/tw ter/ho _m xer/product",
        "ho -m xer/thr ft/src/ma n/thr ft:thr ft-scala",
        "product-m xer/component-l brary/src/ma n/scala/com/tw ter/product_m xer/component_l brary/module",
        "product-m xer/core/src/ma n/scala/com/tw ter/product_m xer/core/controllers",
        "product-m xer/core/src/ma n/scala/com/tw ter/product_m xer/core/module",
        "product-m xer/core/src/ma n/scala/com/tw ter/product_m xer/core/module/str ngcenter",
        "product-m xer/core/src/ma n/thr ft/com/tw ter/product_m xer/core:thr ft-scala",
        "src/thr ft/com/tw ter/t  l nes/render:thr ft-scala",
        "strato/conf g/columns/auth-context:auth-context-strato-cl ent",
        "strato/conf g/columns/g zmoduck:g zmoduck-strato-cl ent",
        "strato/src/ma n/scala/com/tw ter/strato/fed",
        "strato/src/ma n/scala/com/tw ter/strato/fed/server",
        "str ngcenter/cl ent",
        "str ngcenter/cl ent/src/ma n/java",
        "str ngcenter/cl ent/src/ma n/scala/com/tw ter/str ngcenter/cl ent",
        "thr ft- b-forms/src/ma n/scala/com/tw ter/thr ft bforms/v ew",
        "t  l nes/src/ma n/scala/com/tw ter/t  l nes/conf g",
        "t  l nes/src/ma n/scala/com/tw ter/t  l nes/features/app",
        "tw ter-server- nternal",
        "tw ter-server/server/src/ma n/scala",
        "ut l/ut l-app/src/ma n/scala",
        "ut l/ut l-core:scala",
        "ut l/ut l-slf4j-ap /src/ma n/scala",
    ],
)
