scala_l brary(
    s ces = ["**/*.scala"],
    comp ler_opt on_sets = ["fatal_warn ngs"],
    str ct_deps = True,
    tags = [
        "bazel-compat ble",
    ],
    dependenc es = [
        "3rdparty/jvm/com/tw ter/b ject on:scrooge",
        "3rdparty/jvm/com/tw ter/storehaus:core",
        "abdec der",
        "abuse/detect on/src/ma n/thr ft/com/tw ter/abuse/detect on/scor ng:thr ft-scala",
        "ann/src/ma n/scala/com/tw ter/ann/common",
        "ann/src/ma n/thr ft/com/tw ter/ann/common:ann-common-scala",
        "aud ence-rewards/thr ft/src/ma n/thr ft:thr ft-scala",
        "commun  es/thr ft/src/ma n/thr ft/com/tw ter/commun  es:thr ft-scala",
        "conf gap /conf gap -core",
        "conf gap /conf gap -dec der",
        "content-m xer/thr ft/src/ma n/thr ft:thr ft-scala",
        "content-recom nder/thr ft/src/ma n/thr ft:thr ft-scala",
        "copyselect onserv ce/server/src/ma n/scala/com/tw ter/copyselect onserv ce/algor hms",
        "copyselect onserv ce/thr ft/src/ma n/thr ft:copyselect onserv ce-scala",
        "cortex-deepb rd/thr ft/src/ma n/thr ft:thr ft-java",
        "cr-m xer/thr ft/src/ma n/thr ft:thr ft-scala",
        "cuad/projects/hashspace/thr ft:thr ft-scala",
        "cuad/projects/tagspace/thr ft/src/ma n/thr ft:thr ft-scala",
        "detop c/thr ft/src/ma n/thr ft:thr ft-scala",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/conf gap ",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/ddg",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/env ron nt",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/fat gue",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/nackwarmupf lter",
        "d scovery-common/src/ma n/scala/com/tw ter/d scovery/common/server",
        "d scovery-ds/src/ma n/thr ft/com/tw ter/dds/sc o/searc r_aggregate_ tory_srp:searc r_aggregate_ tory_srp-scala",
        "esc rb rd/src/scala/com/tw ter/esc rb rd/ut l/ tadatast ch",
        "esc rb rd/src/scala/com/tw ter/esc rb rd/ut l/uttcl ent",
        "esc rb rd/src/thr ft/com/tw ter/esc rb rd/utt:strato-columns-scala",
        "eventbus/cl ent",
        "eventdetect on/event_context/src/ma n/scala/com/tw ter/eventdetect on/event_context/ut l",
        "events-recos/events-recos-serv ce/src/ma n/thr ft:events-recos-thr ft-scala",
        "explore/explore-ranker/thr ft/src/ma n/thr ft:thr ft-scala",
        "featuresw c s/featuresw c s-core/src/ma n/scala",
        "featuresw c s/featuresw c s-core/src/ma n/scala:dynmap",
        "featuresw c s/featuresw c s-core/src/ma n/scala:rec p ent",
        "featuresw c s/featuresw c s-core/src/ma n/scala:useragent",
        "featuresw c s/featuresw c s-core/src/ma n/scala/com/tw ter/featuresw c s/v2/bu lder",
        "f nagle- nternal/mtls/src/ma n/scala/com/tw ter/f nagle/mtls/aut nt cat on",
        "f nagle- nternal/mtls/src/ma n/scala/com/tw ter/f nagle/mtls/server",
        "f nagle- nternal/ostr ch-stats",
        "f nagle/f nagle-core/src/ma n",
        "f nagle/f nagle-http/src/ma n/scala",
        "f nagle/f nagle- mcac d/src/ma n/scala",
        "f nagle/f nagle-stats",
        "f nagle/f nagle-thr ftmux",
        "f nagle/f nagle-tunable/src/ma n/scala",
        "f nagle/f nagle-z pk n-scr be",
        "f natra- nternal/abdec der",
        "f natra- nternal/dec der",
        "f natra- nternal/mtls-http/src/ma n/scala",
        "f natra- nternal/mtls-thr ftmux/src/ma n/scala",
        "f natra/http-cl ent/src/ma n/scala",
        "f natra/http-core/src/ma n/java/com/tw ter/f natra/http",
        "f natra/http-core/src/ma n/scala/com/tw ter/f natra/http/response",
        "f natra/http-server/src/ma n/scala/com/tw ter/f natra/http",
        "f natra/http-server/src/ma n/scala/com/tw ter/f natra/http/f lters",
        "f natra/ nject/ nject-app/src/ma n/java/com/tw ter/ nject/annotat ons",
        "f natra/ nject/ nject-app/src/ma n/scala",
        "f natra/ nject/ nject-core/src/ma n/scala",
        "f natra/ nject/ nject-server/src/ma n/scala",
        "f natra/ nject/ nject-slf4j/src/ma n/scala/com/tw ter/ nject",
        "f natra/ nject/ nject-thr ft-cl ent/src/ma n/scala",
        "f natra/ nject/ nject-ut ls/src/ma n/scala",
        "f natra/ut ls/src/ma n/java/com/tw ter/f natra/annotat ons",
        "fleets/fleets-proxy/thr ft/src/ma n/thr ft:fleet-scala",
        "fleets/fleets-proxy/thr ft/src/ma n/thr ft/serv ce:baseserv ce-scala",
        "flock-cl ent/src/ma n/scala",
        "flock-cl ent/src/ma n/thr ft:thr ft-scala",
        "follow-recom ndat ons-serv ce/thr ft/src/ma n/thr ft:thr ft-scala",
        "fr gate/fr gate-common:base",
        "fr gate/fr gate-common:conf g",
        "fr gate/fr gate-common:debug",
        "fr gate/fr gate-common:ent y_graph_cl ent",
        "fr gate/fr gate-common: tory",
        "fr gate/fr gate-common:logger",
        "fr gate/fr gate-common:ml-base",
        "fr gate/fr gate-common:ml-feature",
        "fr gate/fr gate-common:ml-pred ct on",
        "fr gate/fr gate-common:ntab",
        "fr gate/fr gate-common:pred cate",
        "fr gate/fr gate-common:rec_types",
        "fr gate/fr gate-common:score_summary",
        "fr gate/fr gate-common:ut l",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/cand date",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/exper  nts",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/f lter",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/modules/store:semant c_core_stores",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/store",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/store/dev ce nfo",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/store/ nterests",
        "fr gate/fr gate-common/src/ma n/scala/com/tw ter/fr gate/common/store/strato",
        "fr gate/push-m xer/thr ft/src/ma n/thr ft:thr ft-scala",
        "geo/geo-pred ct on/src/ma n/thr ft:local-v ral-t ets-thr ft-scala",
        "geoduck/serv ce/src/ma n/scala/com/tw ter/geoduck/serv ce/common/cl entmodules",
        "geoduck/ut l/country",
        "g zmoduck/cl ent/src/ma n/scala/com/tw ter/g zmoduck/testusers/cl ent",
        " rm / rm -core:model-user_state",
        " rm / rm -core:pred cate",
        " rm / rm -core:pred cate-g zmoduck",
        " rm / rm -core:pred cate-scarecrow",
        " rm / rm -core:pred cate-soc algraph",
        " rm / rm -core:pred cate-t etyp e",
        " rm / rm -core:store-labeled_push_recs",
        " rm / rm -core:store- tastore",
        " rm / rm -core:store-t  zone",
        " rm / rm -core:store-t etyp e",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /constants",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /model",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/common",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/g zmoduck",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/scarecrow",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/semant c_core",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/user_htl_sess on_store",
        " rm / rm -core/src/ma n/scala/com/tw ter/ rm /store/user_ nterest",
        "hml /hss/src/ma n/thr ft/com/tw ter/hss:thr ft-scala",
        " b s2/serv ce/src/ma n/scala/com/tw ter/ b s2/l b",
        " b s2/serv ce/src/ma n/thr ft/com/tw ter/ b s2/serv ce: b s2-serv ce-scala",
        " nterests-serv ce/thr ft/src/ma n/thr ft:thr ft-scala",
        " nterests_d scovery/thr ft/src/ma n/thr ft:batch-thr ft-scala",
        " nterests_d scovery/thr ft/src/ma n/thr ft:serv ce-thr ft-scala",
        "kujaku/thr ft/src/ma n/thr ft:doma n-scala",
        "l ve-v deo-t  l ne/cl ent/src/ma n/scala/com/tw ter/l vev deo/t  l ne/cl ent/v2",
        "l ve-v deo-t  l ne/doma n/src/ma n/scala/com/tw ter/l vev deo/t  l ne/doma n",
        "l ve-v deo-t  l ne/doma n/src/ma n/scala/com/tw ter/l vev deo/t  l ne/doma n/v2",
        "l ve-v deo-t  l ne/thr ft/src/ma n/thr ft/com/tw ter/l vev deo/t  l ne:thr ft-scala",
        "l ve-v deo/common/src/ma n/scala/com/tw ter/l vev deo/common/doma n/v2",
        "l ve-v deo/common/src/ma n/scala/com/tw ter/l vev deo/common/ ds",
        "not f cat ons-platform/ nbound-not f cat ons/src/ma n/thr ft/com/tw ter/ nbound_not f cat ons:except on-scala",
        "not f cat ons-platform/ nbound-not f cat ons/src/ma n/thr ft/com/tw ter/ nbound_not f cat ons:thr ft-scala",
        "not f cat ons-platform/platform-l b/src/ma n/thr ft/com/tw ter/not f cat ons/platform:custom-not f cat on-act ons-scala",
        "not f cat ons-platform/platform-l b/src/ma n/thr ft/com/tw ter/not f cat ons/platform:thr ft-scala",
        "not f cat ons-relevance/src/scala/com/tw ter/nrel/ avyranker",
        "not f cat ons-relevance/src/scala/com/tw ter/nrel/hydrat on/base",
        "not f cat ons-relevance/src/scala/com/tw ter/nrel/hydrat on/fr gate",
        "not f cat ons-relevance/src/scala/com/tw ter/nrel/hydrat on/push",
        "not f cat ons-relevance/src/scala/com/tw ter/nrel/l ghtranker",
        "not f cat onserv ce/common/src/ma n/scala/com/tw ter/not f cat onserv ce/gener cfeedbackstore",
        "not f cat onserv ce/common/src/ma n/scala/com/tw ter/not f cat onserv ce/model:al as",
        "not f cat onserv ce/common/src/ma n/scala/com/tw ter/not f cat onserv ce/model/serv ce",
        "not f cat onserv ce/common/src/test/scala/com/tw ter/not f cat onserv ce/mocks",
        "not f cat onserv ce/scr be/src/ma n/scala/com/tw ter/not f cat onserv ce/scr be/manhattan:mh_wrapper",
        "not f cat onserv ce/thr ft/src/ma n/thr ft/com/tw ter/not f cat onserv ce/ap :thr ft-scala",
        "not f cat onserv ce/thr ft/src/ma n/thr ft/com/tw ter/not f cat onserv ce/badgecount-ap :thr ft-scala",
        "not f cat onserv ce/thr ft/src/ma n/thr ft/com/tw ter/not f cat onserv ce/gener c_not f cat ons:thr ft-scala",
        "not f nfra/n -l b/src/ma n/scala/com/tw ter/n /l b/logged_out_transform",
        "observab l y/observab l y-manhattan-cl ent/src/ma n/scala",
        "onboard ng/serv ce/src/ma n/scala/com/tw ter/onboard ng/task/serv ce/models/external",
        "onboard ng/serv ce/thr ft/src/ma n/thr ft:thr ft-scala",
        "people-d scovery/ap /thr ft/src/ma n/thr ft:thr ft-scala",
        "per scope/ap -proxy-thr ft/thr ft/src/ma n/thr ft:thr ft-scala",
        "product-m xer/core/src/ma n/scala/com/tw ter/product_m xer/core/module",
        "product-m xer/core/src/ma n/scala/com/tw ter/product_m xer/core/module/str ngcenter",
        "product-m xer/core/src/ma n/thr ft/com/tw ter/product_m xer/core:thr ft-scala",
        "q g-ranker/thr ft/src/ma n/thr ft:thr ft-scala",
        "rux-ds/src/ma n/thr ft/com/tw ter/ruxds/jobs/user_past_aggregate:user_past_aggregate-scala",
        "rux/common/src/ma n/scala/com/tw ter/rux/common/encode",
        "rux/common/thr ft/src/ma n/thr ft/rux-context:rux-context-scala",
        "rux/common/thr ft/src/ma n/thr ft/strato:strato-scala",
        "scr bel b/marshallers/src/ma n/scala/com/tw ter/scr bel b/marshallers",
        "scrooge/scrooge-core",
        "scrooge/scrooge-ser al zer/src/ma n/scala",
        "sens  ve-ds/src/ma n/thr ft/com/tw ter/sc o/nsfw_user_seg ntat on:nsfw_user_seg ntat on-scala",
        "servo/dec der/src/ma n/scala",
        "servo/request/src/ma n/scala",
        "servo/ut l/src/ma n/scala",
        "src/java/com/tw ter/ml/ap :ap -base",
        "src/java/com/tw ter/ml/pred ct on/core",
        "src/scala/com/tw ter/fr gate/data_p pel ne/common",
        "src/scala/com/tw ter/fr gate/data_p pel ne/embedd ng_cg:embedd ng_cg-test-user- ds",
        "src/scala/com/tw ter/fr gate/data_p pel ne/features_common",
        "src/scala/com/tw ter/fr gate/news_art cle_recs/news_art cles_ tadata:thr ft-scala",
        "src/scala/com/tw ter/frontpage/stream/ut l",
        "src/scala/com/tw ter/language/normal zat on",
        "src/scala/com/tw ter/ml/ap /embedd ng",
        "src/scala/com/tw ter/ml/ap /ut l:datarecord",
        "src/scala/com/tw ter/ml/featurestore/catalog/ent  es/core",
        "src/scala/com/tw ter/ml/featurestore/catalog/ent  es/mag crecs",
        "src/scala/com/tw ter/ml/featurestore/catalog/features/core:aggregate",
        "src/scala/com/tw ter/ml/featurestore/catalog/features/cuad:aggregate",
        "src/scala/com/tw ter/ml/featurestore/catalog/features/embedd ngs",
        "src/scala/com/tw ter/ml/featurestore/catalog/features/mag crecs:aggregate",
        "src/scala/com/tw ter/ml/featurestore/catalog/features/top c_s gnals:aggregate",
        "src/scala/com/tw ter/ml/featurestore/l b",
        "src/scala/com/tw ter/ml/featurestore/l b/data",
        "src/scala/com/tw ter/ml/featurestore/l b/dynam c",
        "src/scala/com/tw ter/ml/featurestore/l b/ent y",
        "src/scala/com/tw ter/ml/featurestore/l b/onl ne",
        "src/scala/com/tw ter/recom ndat on/ nterests/d scovery/core/conf g",
        "src/scala/com/tw ter/recom ndat on/ nterests/d scovery/core/deploy",
        "src/scala/com/tw ter/recom ndat on/ nterests/d scovery/core/model",
        "src/scala/com/tw ter/recom ndat on/ nterests/d scovery/popgeo/deploy",
        "src/scala/com/tw ter/s mclusters_v2/common",
        "src/scala/com/tw ter/storehaus_ nternal/manhattan",
        "src/scala/com/tw ter/storehaus_ nternal/manhattan/conf g",
        "src/scala/com/tw ter/storehaus_ nternal/ mcac ",
        "src/scala/com/tw ter/storehaus_ nternal/ mcac /conf g",
        "src/scala/com/tw ter/storehaus_ nternal/ut l",
        "src/scala/com/tw ter/tax /common",
        "src/scala/com/tw ter/tax /conf g",
        "src/scala/com/tw ter/tax /deploy",
        "src/scala/com/tw ter/tax /trend ng/common",
        "src/thr ft/com/tw ter/ads/adserver:adserver_rpc-scala",
        "src/thr ft/com/tw ter/cl entapp/gen:cl entapp-scala",
        "src/thr ft/com/tw ter/core_workflows/user_model:user_model-scala",
        "src/thr ft/com/tw ter/esc rb rd/common:constants-scala",
        "src/thr ft/com/tw ter/esc rb rd/ tadata: gadata-scala",
        "src/thr ft/com/tw ter/esc rb rd/ tadata: tadata-serv ce-scala",
        "src/thr ft/com/tw ter/esc rb rd/search:search-serv ce-scala",
        "src/thr ft/com/tw ter/expandodo:only-scala",
        "src/thr ft/com/tw ter/fr gate:fr gate-common-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate:fr gate-ml-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate:fr gate-not f cat on-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate:fr gate-secondary-accounts-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate:fr gate-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate:fr gate-user- d a-representat on-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/data_p pel ne:fr gate-user- tory-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/dau_model:fr gate-dau-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/mag c_events:fr gate-mag c-events-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/mag c_events/scr be:thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/pushcap:fr gate-pushcap-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/pushserv ce:fr gate-pushserv ce-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/scr be:fr gate-scr be-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/subscr bed_search:fr gate-subscr bed-search-thr ft-scala",
        "src/thr ft/com/tw ter/fr gate/user_states:fr gate-userstates-thr ft-scala",
        "src/thr ft/com/tw ter/geoduck:geoduck-scala",
        "src/thr ft/com/tw ter/g zmoduck:thr ft-scala",
        "src/thr ft/com/tw ter/g zmoduck:user-thr ft-scala",
        "src/thr ft/com/tw ter/ rm : rm -scala",
        "src/thr ft/com/tw ter/ rm /pop_geo: rm -pop-geo-scala",
        "src/thr ft/com/tw ter/ rm /stp: rm -stp-scala",
        "src/thr ft/com/tw ter/ b s:serv ce-scala",
        "src/thr ft/com/tw ter/manhattan:v1-scala",
        "src/thr ft/com/tw ter/manhattan:v2-scala",
        "src/thr ft/com/tw ter/ml/ap :data-java",
        "src/thr ft/com/tw ter/ml/ap :data-scala",
        "src/thr ft/com/tw ter/ml/featurestore/t  l nes:ml-features-t  l nes-scala",
        "src/thr ft/com/tw ter/ml/featurestore/t  l nes:ml-features-t  l nes-strato",
        "src/thr ft/com/tw ter/ml/pred ct on_serv ce:pred ct on_serv ce-java",
        "src/thr ft/com/tw ter/perm ss ons_storage:thr ft-scala",
        "src/thr ft/com/tw ter/p nk-floyd/thr ft:thr ft-scala",
        "src/thr ft/com/tw ter/recos:recos-common-scala",
        "src/thr ft/com/tw ter/recos/user_t et_ent y_graph:user_t et_ent y_graph-scala",
        "src/thr ft/com/tw ter/recos/user_user_graph:user_user_graph-scala",
        "src/thr ft/com/tw ter/relevance/feature_store:feature_store-scala",
        "src/thr ft/com/tw ter/search:earlyb rd-scala",
        "src/thr ft/com/tw ter/search/common:features-scala",
        "src/thr ft/com/tw ter/search/query_ nteract on_graph:query_ nteract on_graph-scala",
        "src/thr ft/com/tw ter/search/query_ nteract on_graph/serv ce:q g-serv ce-scala",
        "src/thr ft/com/tw ter/serv ce/ tastore/gen:thr ft-scala",
        "src/thr ft/com/tw ter/serv ce/scarecrow/gen:scarecrow-scala",
        "src/thr ft/com/tw ter/serv ce/scarecrow/gen:t ered-act ons-scala",
        "src/thr ft/com/tw ter/s mclusters_v2:s mclusters_v2-thr ft-scala",
        "src/thr ft/com/tw ter/soc algraph:thr ft-scala",
        "src/thr ft/com/tw ter/spam/rtf:safety-level-scala",
        "src/thr ft/com/tw ter/t  l nem xer:thr ft-scala",
        "src/thr ft/com/tw ter/t  l nem xer/server/ nternal:thr ft-scala",
        "src/thr ft/com/tw ter/t  l nes/author_features/user_ alth:thr ft-scala",
        "src/thr ft/com/tw ter/t  l nes/real_graph:real_graph-scala",
        "src/thr ft/com/tw ter/t  l nescorer:thr ft-scala",
        "src/thr ft/com/tw ter/t  l nescorer/server/ nternal:thr ft-scala",
        "src/thr ft/com/tw ter/t  l neserv ce/server/ nternal:thr ft-scala",
        "src/thr ft/com/tw ter/t  l neserv ce/server/suggests/logg ng:thr ft-scala",
        "src/thr ft/com/tw ter/trends/common:common-scala",
        "src/thr ft/com/tw ter/trends/tr p_v1:tr p-t ets-thr ft-scala",
        "src/thr ft/com/tw ter/t etyp e:serv ce-scala",
        "src/thr ft/com/tw ter/t etyp e:t et-scala",
        "src/thr ft/com/tw ter/user_sess on_store:thr ft-scala",
        "src/thr ft/com/tw ter/wtf/cand date:wtf-cand date-scala",
        "src/thr ft/com/tw ter/wtf/ nterest: nterest-thr ft-scala",
        "src/thr ft/com/tw ter/wtf/scald ng/common:thr ft-scala",
        "st ch/st ch-core",
        "st ch/st ch-g zmoduck",
        "st ch/st ch-soc algraph/src/ma n/scala",
        "st ch/st ch-storehaus/src/ma n/scala",
        "st ch/st ch-t etyp e/src/ma n/scala",
        "storage/cl ents/manhattan/cl ent/src/ma n/scala",
        "strato/conf g/columns/cl ents:cl ents-strato-cl ent",
        "strato/conf g/columns/geo/user:user-strato-cl ent",
        "strato/conf g/columns/globe/curat on:curat on-strato-cl ent",
        "strato/conf g/columns/ nterests: nterests-strato-cl ent",
        "strato/conf g/columns/ml/featureStore:featureStore-strato-cl ent",
        "strato/conf g/columns/not f cat ons:not f cat ons-strato-cl ent",
        "strato/conf g/columns/not f nfra:not f nfra-strato-cl ent",
        "strato/conf g/columns/per scope:per scope-strato-cl ent",
        "strato/conf g/columns/rux",
        "strato/conf g/columns/rux:rux-strato-cl ent",
        "strato/conf g/columns/rux/open-app:open-app-strato-cl ent",
        "strato/conf g/columns/soc algraph/graphs:graphs-strato-cl ent",
        "strato/conf g/columns/soc algraph/serv ce/soft_users:soft_users-strato-cl ent",
        "strato/conf g/columns/translat on/serv ce:serv ce-strato-cl ent",
        "strato/conf g/columns/translat on/serv ce/platform:platform-strato-cl ent",
        "strato/conf g/columns/trends/tr p:tr p-strato-cl ent",
        "strato/conf g/src/thr ft/com/tw ter/strato/columns/fr gate:logged-out- b-not f cat ons-scala",
        "strato/conf g/src/thr ft/com/tw ter/strato/columns/not f cat ons:thr ft-scala",
        "strato/src/ma n/scala/com/tw ter/strato/conf g",
        "strato/src/ma n/scala/com/tw ter/strato/response",
        "thr ft- b-forms",
        "t  l ne-tra n ng-serv ce/serv ce/thr ft/src/ma n/thr ft:thr ft-scala",
        "t  l nes/src/ma n/scala/com/tw ter/t  l nes/features/app",
        "top c-soc al-proof/server/src/ma n/thr ft:thr ft-scala",
        "top cl st ng/top cl st ng-core/src/ma n/scala/com/tw ter/top cl st ng",
        "top cl st ng/top cl st ng-utt/src/ma n/scala/com/tw ter/top cl st ng/utt",
        "trends/common/src/ma n/thr ft/com/tw ter/trends/common:thr ft-scala",
        "t etyp e/src/scala/com/tw ter/t etyp e/t ettext",
        "tw ter-context/src/ma n/scala",
        "tw ter-server- nternal",
        "tw ter-server/server/src/ma n/scala",
        "tw ter-text/l b/java/src/ma n/java/com/tw ter/tw tertext",
        "twml/runt  /src/ma n/scala/com/tw ter/deepb rd/runt  /pred ct on_eng ne:pred ct on_eng ne_mkl",
        "ubs/common/src/ma n/thr ft/com/tw ter/ubs:broadcast-thr ft-scala",
        "ubs/common/src/ma n/thr ft/com/tw ter/ubs:seller_appl cat on-thr ft-scala",
        "user_sess on_store/src/ma n/scala/com/tw ter/user_sess on_store/ mpl/manhattan/readwr e",
        "ut l- nternal/scr be",
        "ut l- nternal/tunable/src/ma n/scala/com/tw ter/ut l/tunable",
        "ut l/ut l-app",
        "ut l/ut l-hash ng/src/ma n/scala",
        "ut l/ut l-slf4j-ap /src/ma n/scala",
        "ut l/ut l-stats/src/ma n/scala",
        "v s b l y/l b/src/ma n/scala/com/tw ter/v s b l y/bu lder",
        "v s b l y/l b/src/ma n/scala/com/tw ter/v s b l y/ nterfaces/push_serv ce",
        "v s b l y/l b/src/ma n/scala/com/tw ter/v s b l y/ nterfaces/spaces",
        "v s b l y/l b/src/ma n/scala/com/tw ter/v s b l y/ut l",
    ],
    exports = [
        "strato/conf g/src/thr ft/com/tw ter/strato/columns/fr gate:logged-out- b-not f cat ons-scala",
    ],
)
