java_l brary(
    na  = "seg nt_bu lder_l b",
    s ces = ["**/*.java"],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "3rdparty/jvm/com/google/guava",
        "3rdparty/jvm/com/google/ nject:gu ce",
        "3rdparty/jvm/org/apac /bookkeeper:bookkeeper-server",
        "3rdparty/jvm/org/apac /bookkeeper:bookkeeper-tw ter-sc ence-prov der",
        "3rdparty/jvm/org/apac /hadoop:hadoop-cl ent-default",
        "3rdparty/jvm/org/apac /thr ft:l bthr ft",
        "3rdparty/jvm/org/apac /zookeeper:zookeeper-cl ent",
        "3rdparty/jvm/org/slf4j:slf4j-ap ",
        "dec der/src/ma n/scala",
        "f natra/ nject/ nject-core/src/ma n/scala",
        "f natra/ nject/ nject-server/src/ma n/scala/com/tw ter/ nject/server",
        "src/java/com/tw ter/common/base",
        "src/java/com/tw ter/common/quant y",
        "src/java/com/tw ter/common/ut l:system-mocks",
        "src/java/com/tw ter/common_ nternal/text/vers on",
        "src/java/com/tw ter/search/common/conf g",
        "src/java/com/tw ter/search/common/database",
        "src/java/com/tw ter/search/common/ tr cs",
        "src/java/com/tw ter/search/common/part  on ng/base",
        "src/java/com/tw ter/search/common/part  on ng/zookeeper",
        "src/java/com/tw ter/search/common/sc ma",
        "src/java/com/tw ter/search/common/sc ma/base",
        "src/java/com/tw ter/search/common/ut l:closeres ceut l",
        "src/java/com/tw ter/search/common/ut l:gcut l",
        "src/java/com/tw ter/search/common/ut l:kerberos",
        "src/java/com/tw ter/search/common/ut l/date",
        "src/java/com/tw ter/search/common/ut l/ o:flushable",
        "src/java/com/tw ter/search/common/ut l/zktrylock",
        "src/java/com/tw ter/search/common/ut l/zookeeper",
        "src/java/com/tw ter/search/earlyb rd:earlyb rd-l b",
        "src/java/com/tw ter/search/earlyb rd/common",
        "src/java/com/tw ter/search/earlyb rd/common/conf g",
        "src/java/com/tw ter/search/earlyb rd/common/userupdates",
        "ut l/ut l-core:scala",
    ],
)

# Us ng hadoop_b nary target can automat cally exclude hadoop related jars  n t  bu lt jar
# and load  n t  r ght jars based on hadoop conf g.
hadoop_b nary(
    na  = "seg nt_bu lder_b nary",
    basena  = "seg nt_bu lder",
    ma n = "com.tw ter.search.earlyb rd.arch ve.seg ntbu lder.Seg ntBu lderMa n",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":seg nt_bu lder_l b",
        "src/java/com/tw ter/search/common/logg ng:search-log4j",
    ],
)
