scala_l brary(
    s ces = [
        "*.scala",
    ],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "esc rb rd/src/scala/com/tw ter/esc rb rd/scald ng/s ce",
        "src/scala/com/tw ter/onboard ng/relevance/s ce:utt_account_recom ndat ons-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:aggregatable_producer_s mclusters_embedd ngs_by_fav_score-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:aggregatable_producer_s mclusters_embedd ngs_by_log_fav_score-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces/presto_hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common/matr x",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/embedd ng",
        "src/scala/com/tw ter/wtf/ent y_real_graph/common",
        "src/scala/com/tw ter/wtf/ent y_real_graph/scald ng/common",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:execut on_app",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:s ces",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:stats_ut l",
        "src/thr ft/com/tw ter/ rm /cand date: rm -cand date-scala",
        "src/thr ft/com/tw ter/onboard ng/relevance/cand dates:cand dates-scala",
        "src/thr ft/com/tw ter/recos/ent  es:ent  es-thr ft-scala",
        "src/thr ft/com/tw ter/wtf/ent y_real_graph:ent y_real_graph-thr ft-scala",
        "users ce/snapshot/src/ma n/scala/com/tw ter/users ce/snapshot/flat:users ce_flat-scala",
        "users ce/snapshot/src/ma n/thr ft/com/tw ter/users ce/snapshot/flat:flat-scala",
    ],
)

hadoop_b nary(
    na  = "aggregatable_logfav_based_producer_embedd ngs_job-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableLogFavBasedProducerEmbedd ngsAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_logfav_based_producer_embedd ngs_job_2020-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableLogFavBasedProducerEmbedd ngs2020AdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_follow_based_producer_embedd ngs_job_2020-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableFollowBasedProducerEmbedd ngs2020AdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_logfav_based_producer_embedd ngs_job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableLogFavBasedProducerEmbedd ngsSc duledApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_logfav_based_producer_embedd ngs_job_2020",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableLogFavBasedProducerEmbedd ngs2020Sc duledApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_follow_based_producer_embedd ngs_job_2020",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableFollowBasedProducerEmbedd ngs2020Sc duledApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_logfav_based_producer_embedd ngs_job_relaxed_fav_engage nt_threshold_2020",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableLogFavBasedProducerEmbedd ngsRelaxedFavEngage ntThreshold2020Sc duledApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_fav_based_producer_embedd ngs_job-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableFavBasedProducerEmbedd ngsAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_fav_based_producer_embedd ngs_job",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableFavBasedProducerEmbedd ngsSc duledApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_fav_based_producer_embedd ngs_job_2020-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableFavBasedProducerEmbedd ngs2020AdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

hadoop_b nary(
    na  = "aggregatable_fav_based_producer_embedd ngs_job_2020",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableFavBasedProducerEmbedd ngs2020Sc duledApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

# Generated w h `capesospy-v2 create_target aggregatable_producer_embedd ngs_by_logfav_score src/scala/com/tw ter/s mclusters_v2/capesos_conf g/atla_proc3.yaml`, conf g hash f8229a.
scald ng_job(
    na  = "aggregatable_producer_embedd ngs_by_logfav_score",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableLogFavBasedProducerEmbedd ngsSc duledApp",
    conf g = [
        ("hadoop.comb ne- nput", "true"),
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.queue", "cassowary.default"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    cron = "17 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)

# Generated w h `capesospy-v2 create_target aggregatable_producer_embedd ngs_by_fav_score src/scala/com/tw ter/s mclusters_v2/capesos_conf g/atla_proc3.yaml`, conf g hash bc0103.
scald ng_job(
    na  = "aggregatable_producer_embedd ngs_by_fav_score",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.producer.AggregatableFavBasedProducerEmbedd ngsSc duledApp",
    conf g = [
        ("hadoop.comb ne- nput", "true"),
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.queue", "cassowary.default"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    cron = "17 * * * *",
    hadoop_cluster = "atla-proc3",
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":producer"],
)
